--- a/.gitmodules
+++ b/.gitmodules
@@ -274,8 +274,8 @@
 	path = skins/chameleon
 	url = https://github.com/ProfessionalWiki/Chameleon.git
 	branch = master
-[submodule "extensions\\examples"]
-	path = extensions\\examples
+[submodule "extensions/examples"]
+	path = extensions/examples
 	url = https://github.com/wikimedia/mediawiki-extensions-examples.git
 [submodule "extensions/BoilerPlate"]
 	path = extensions/BoilerPlate
