--- a/.gitmodules
+++ b/.gitmodules
@@ -281,3 +281,9 @@
 [submodule "extensions/Checklists"]
 	path = extensions/Checklists
 	url = https://github.com/wikimedia/mediawiki-extensions-Checklists
+[submodule "extensions/RatePage"]
+	path = extensions/RatePage
+	url = https://gitlab.com/nonsensopedia/extensions/ratepage.git
+[submodule "extensions/GroupsSidebar"]
+	path = extensions/GroupsSidebar
+	url = https://github.com/wikimedia/mediawiki-extensions-GroupsSidebar.git
