--- a/.gitmodules
+++ b/.gitmodules
@@ -287,3 +287,6 @@
 [submodule "extensions/GroupsSidebar"]
 	path = extensions/GroupsSidebar
 	url = https://github.com/wikimedia/mediawiki-extensions-GroupsSidebar.git
+[submodule "extensions/CentralNotice"]
+	path = extensions/CentralNotice
+	url = https://github.com/wikimedia/mediawiki-extensions-CentralNotice
