Added git submodule - EventLogging

--- a/.gitmodules
+++ b/.gitmodules
@@ -335,3 +335,6 @@
 [submodule "extensions/OpenIDConnect"]
 	path = extensions/OpenIDConnect
 	url = https://github.com/wikimedia/mediawiki-extensions-OpenIDConnect
+[submodule "xtensions/EventLogging"]
+	path = xtensions/EventLogging
+	url = https://github.com/wikimedia/mediawiki-extensions-EventLogging
