Add git submodule - SubpageNavigation

--- a/.gitmodules
+++ b/.gitmodules
@@ -368,3 +368,6 @@
 [submodule "extensions/LinkSuggest"]
 	path = extensions/LinkSuggest
 	url = https://github.com/wikimedia/mediawiki-extensions-LinkSuggest.git
+[submodule "extensions/SubpageNavigation"]
+	path = extensions/SubpageNavigation
+	url = https://github.com/wikimedia/mediawiki-extensions-LinkSuggest.git
