Add git submodule - LoginNotify

--- a/.gitmodules
+++ b/.gitmodules
@@ -371,3 +371,6 @@
 [submodule "extensions/SubpageNavigation"]
 	path = extensions/SubpageNavigation
 	url = https://github.com/wikimedia/mediawiki-extensions-LinkSuggest.git
+[submodule "extensions/LoginNotify"]
+	path = extensions/LoginNotify
+	url = https://github.com/wikimedia/mediawiki-extensions-LoginNotify
